# global-hr-module-intelligence-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: main.py
app/core/: exceptions.py  logger.py  (+3 more)
data/: absence_plans.csv  absence_requests.csv  benefit_enrollments.csv  benefit_plans.csv  companies.csv  compensation_grades.csv  compensation_plans.csv  cost_centers.csv  critical_roles.csv  data_quality_issues.csv  job_families.csv  job_profiles.csv  job_requisitions.csv  learning_courses.csv  lineage_report.csv  locations.csv  offers.csv  pay_groups.csv  performance_reviews.csv  personal_development_plans.csv  positions.csv  skill_assessments.csv  skills.csv  succession_candidates.csv  succession_pools.csv  supervisory_organizations.csv  surveys.csv  talent_reviews.csv  validation_report.csv  worker_compensation.csv  worker_skills.csv  workers.csv
documentation/: context_builder.py  engine.py  generate_all.py  markdown_renderer.py
metadata/: department_access_catalog.json  global_hr_api_catalog.json  global_hr_cardinalities_v1.json  global_hr_data_product_contract.json  global_hr_dataset_source_v1.json  global_hr_dataverse_build_plan.json  global_hr_dataverse_metadata_model.json  global_hr_relationship_matrix_v1.json  global_hr_security_model.json  global_hr_sharepoint_information_architecture.json  sharepoint_metadata_summary_1782285260519.csv
openapi/: custom_openapi.py  metadata.py
scripts/: smoke_test_api.py  validate_generated_api.py
(+26 files in other folders)
